<resources>
    <string name="app_name">Movie App</string>
    <string name="title_favorite">Module Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="image_preview">Image Preview</string>
    <string name="image_preview_darker">Image Preview Darker</string>
    <string name="description">Description</string>
    <string name="abd_wahid">Abd. Wahid</string>
    <string name="select_language">Pilih Bahasa</string>
    <string name="about_us">Tentang Kami</string>
    <string name="privacy_policy">Syarat dan Ketentuan</string>
    <string name="share">Bagikan</string>
</resources>